         rzx.[ch],spectrum.[ch],tape.[ch],timer/timer.[ch],ui/gtk/debugger.c,
         z80/{coretest.c,z80.[ch],z80.pl,z80_ops.c}: refactor the event
         architecture so that modules register their own events with the
         event system (patch #1991683).
20080619 event.c: add missing #include <string.h>.
20080619 ui/gtk/gtkkeyboard.c: remove X dependency for unshifting keys.
20080619 rzx.c: add debugger event for end of RZX playback.
20080621 debugger/breakpoint.c: don't try copying an empty condition.
20080621 debugger/debugger.c: when exiting, quit the main emulation loop
	 immediately.
20080623 compat/{amiga/Makefile.am,morphos/Makefile.am,unix/{Makefile.am,
         file.c},wii/{Makefile.am,file.c},win32/Makefile.am},compat.h,if1.c,
         utils.c: factor out low-level file handling into compat/<os>/file.c;
         needed for Wii port.
20080623 compat/{unix/file.c,wii/file.c},utils.c: don't produce an error
	 message if opening a file failed as this can be a normal result.
20080623 utils.c: call the right function when reading a file.
20080624 ui/widget/query.c: make widget queries navigable keyboardlessly
         (Fred).
20080626 menu.c,ui/{gtk/gtkui.c,widget/menu.c,win32/win32ui.c}: amalgamate
         triplicated functions (patch #1991628) (Gergely Szasz).
20080626 compat/unix/file.c: add <string.h> for strerror prototypes, printf
         warning fixes too (Fred).
20080629 utils.c: add <string.h> for strncpy prototype (Fred).
20080629 menu.[ch],menu_data.[dat|pl],ui/widget/{menu.c,widget.[ch]}: add
         optional detail to menus showing current option selected (Fred).
20080630 dck.c,divide.c,fuse.c,if1.c,menu.c,rzx.c,simpleide.c,snapshot.c,
	 tape.c,zxatasp.c,zxcf.c: handle new allocator returns object
	 style API from libspectrum.
20080630 zxatasp.c: intialise error before returning it (Fred).
20080701 tape.c: one more function that can no longer error.
20080706 debugger/commandl.l: fix warning with recent versions of Flex.