@@ -2772,3 +2772,5 @@
 20080630 zxatasp.c: intialise error before returning it (Fred).
 20080701 tape.c: one more function that can no longer error.
 20080706 debugger/commandl.l: fix warning with recent versions of Flex.
+20080706 sound/alsasound.c: don't call deprecated functions (fixes bug
+	 #1916457) (Gergely Szasz).
